--- a/templates/coinflip.html
+++ b/templates/coinflip.html
@@ -13,16 +13,14 @@
         color: #fff;
     }
 
-
-      
       .coinflip-page {
-          width: 100%;
-          max-width: 1200px;
-          margin: 40px auto;
-          padding: 0 20px; 
-          overflow-x: hidden; 
-      }
-
+        max-width: 1200px;
+        margin: 40px auto;
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        align-items: center;
+    }
 
     .coinflip-controls {
         display: flex;
